tests/spec/non_conformant/errors/import/miss/mixin/control_else/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-else"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-else/inside.hrx"

// Ignoring "inside", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/import/miss/mixin/control-else/outside.hrx"

// Ignoring "outside", error tests are not supported yet.
